fix: chart cut off bug fix

--- a/src/components/GanttFlow/GanttChart/Bar/Bar.module.css
+++ b/src/components/GanttFlow/GanttChart/Bar/Bar.module.css
@@ -15,6 +15,5 @@
   pointer-events: none;
   user-select: none;
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
