--- a/src/components/GanttFlow/GanttFlow.module.css
+++ b/src/components/GanttFlow/GanttFlow.module.css
@@ -1,5 +1,6 @@
 .gantt-flow-container {
-  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .task-grouping-area {
@@ -9,6 +10,5 @@
 .gantt-flow-chart-container {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   overflow-x: auto;
 }
